Big checkin:  1. Security: I added logic for granting and revoking rights to users. I also removed some cruft in the security-config.xml file. 2) I implemented user profile edits through all layers. 3) I implemented password update to the service layer including error conditions - still need to decide whether update logic goes in repo or in service layer. 3) I fixed the integration tests - those are working with live data. I still need to add integration tests for two two invitation scenarios as well as changing a password, and updating a user profile.
git-svn-id: https://svn.duraspace.org/duracloud-priv/trunk@907 3c0c4179-e91d-42e7-a082-8e2792ce3676