@@ -1,4 +1,4 @@
 #!/bin/bash 
 
-export MAVEN_OPTS="-Xrunjdwp:transport=dt_socket,address=4000,server=y,suspend=n"
+export MAVEN_OPTS="-Xrunjdwp:transport=dt_socket,address=4000,server=y,suspend=n -Xms256m -Xmx1024m -XX:MaxPermSize=256m"
 mvn jetty:run --offline
